--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,10 +1,81 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
-<img src="static/img/airbnb-logo.png" class="img-thumbnail" />
+<nav class="d-flex justify-content-between border-bottom">
+    <img src="static/img/airbnb-logo2.png" class="logo" />
+    <div class="mt-3">
+        <input type="text" placeholder="Anywhere | Any Week | Add Guests"/>
+        <img src="static/img/search-glass.png" class="select-logos"/>
+    </div>
+    <div class="d-flex mt-3">
+        <p class="me-3">Airbnb your home</p>
+        <img src="static/img/globe.png" class="globe-logo" />
+    </div>
+</nav>
+<div class="container-fluid">
+    <div class="mt-5 d-flex text-center justify-content-between">
+        <div>
+           <img src="static/img/room.png" class="select-logos" />
+            <p class="select-font-size">Rooms</p>
+        </div>
+        <div>
+            <img src="static/img/amazing_view.png" class="select-logos" />
+            <p class="select-font-size">Amazing Views</p>
+        </div>
+        <div>
+            <img src="static/img/swimming-pool.png" class="select-logos" />
+            <p class="select-font-size">Amazing Pools</p>
+        </div>
+        <div>
+            <img src="static/img/mansion.png" class="select-logos" />
+            <p class="select-font-size">Mansions</p>
+        </div>
+        <div>
+            <img src="static/img/treehouse.png" class="select-logos" />
+            <p class="select-font-size">Tree Houses</p>
+        </div>
+        <div>
+            <img src="static/img/trending.png" class="select-logos" />
+            <p class="select-font-size">Trending</p>
+        </div>
+        <div>
+            <img src="static/img/cabin.png" class="select-logos" />
+            <p class="select-font-size">Cabins</p>
+        </div>
+        <div>
+            <img src="static/img/castle.png" class="select-logos" />
+            <p class="select-font-size">Castles</p>
+        </div>
+        <div>
+            <img src="static/img/lake-front.png" class="select-logos" />
+            <p class="select-font-size">Lakefront</p>
+        </div>
+        <div>
+            <img src="static/img/tiny-homes.png" class="select-logos" />
+            <p class="select-font-size">Tiny Homes</p>
+        </div>
+        <div>
+            <img src="static/img/designs.png" class="select-logos" />
+            <p class="select-font-size">Design</p>
+        </div>
+        <div>
+            <img src="static/img/beach.png" class="select-logos" />
+            <p class="select-font-size">Beach</p>
+        </div>
+        <button class="btn fs-10 text btn-outline-dark mb-4">
+            <img src="static/img/filter.png" class="select-logos" />
+            Filters
+        </button>
+    </div>
+    <div class="text-center">
+        <input type="text" placeholder="Display Price!"/>
+        <h1>Hello World</h1>
+    </div>
+</div>
 
-Welcome to your new app.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+
+
+@*<img src="static/img/airbnb-logo.png" class="img-thumbnail" />*@
+@*<SurveyPrompt Title="How is Blazor working for you?" />*@
