--- a/Client/wwwroot/css/app.css
+++ b/Client/wwwroot/css/app.css
@@ -1,5 +1,21 @@
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
+.logo {
+    width: 100px;
+}
+
+.globe-logo {
+    height: 20px;
+}
+
+.select-logos {
+    height: 28px;
+}
+
+.select-font-size {
+    font-size: smaller;
+}
+
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
@@ -99,3 +115,6 @@ a, .btn-link {
     .loading-progress-text:after {
         content: var(--blazor-load-percentage-text, "Loading");
     }
+
+
+
