--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -2,11 +2,10 @@
 
 <PageTitle>Home</PageTitle>
 
-<nav class="d-flex justify-content-between border-bottom">
+<nav class="d-flex justify-content-between brder">
     <img src="static/img/airbnb-logo2.png" class="logo" />
     <div class="mt-3">
-        <input type="text" placeholder="Anywhere | Any Week | Add Guests"/>
-        <img src="static/img/search-glass.png" class="select-logos"/>
+        <input type="text" placeholder="Anywhere | Any Week | Add Guests" class="rounded-pill search p-2" />
     </div>
     <div class="d-flex mt-3">
         <p class="me-3">Airbnb your home</p>
@@ -16,7 +15,7 @@
 <div class="container-fluid">
     <div class="mt-5 d-flex text-center justify-content-between">
         <div>
-           <img src="static/img/room.png" class="select-logos" />
+            <img src="static/img/room.png" class="select-logos" />
             <p class="select-font-size">Rooms</p>
         </div>
         <div>
@@ -69,13 +68,50 @@
         </button>
     </div>
     <div class="text-center">
-        <input type="text" placeholder="Display Price!"/>
-        <h1>Hello World</h1>
+        <input type="text" placeholder="Display total price | Includes all fees, before taxes" class="rounded-3 p-3 dsplay" />
+    </div>
+    <div class="row justify-content-between mt-4">
+        <div class="col">
+            <img src="/static/Houses/OceanCity_MD.png" alt="OceanCity" />
+            <p class="fw-bold mt-2">Ocean City, Maryland</p>
+            <p>On Ocean City Beach</p>
+            <p>Aug 26-31</p>
+            <p class="fw-bold">$785 night</p>
+        </div>
+        <div class="col">
+            <img src="/static/Houses/Chincoteague_VA.png" alt="Chincoteague" />
+            <p class="fw-bold mt-2">Chincoteague, Virginia</p>
+            <p>Near Bow Beach</p>
+            <p>Aug 20-27</p>
+            <p class="fw-bold">$599 night</p>
+        </div>
+        <div class="col">
+            <img src="/static/Houses/OceanCity_MD.png" alt="OceanCity" />
+            <p class="fw-bold mt-2">Ocean City, Maryland</p>
+            <p>On Ocean City Beach</p>
+            <p>Aug 26-31</p>
+            <p class="fw-bold">$785 night</p>
+        </div>
+        <div class="col">
+            <img src="/static/Houses/OceanCity_MD.png" alt="OceanCity" />
+            <p class="fw-bold mt-2">Ocean City, Maryland</p>
+            <p>On Ocean City Beach</p>
+            <p>Aug 26-31</p>
+            <p class="fw-bold">$785 night</p>
+        </div>
+        <div class="col">
+            <img src="/static/Houses/OceanCity_MD.png" alt="OceanCity" />
+            <p class="fw-bold mt-2">Ocean City, Maryland</p>
+            <p>On Ocean City Beach</p>
+            <p>Aug 26-31</p>
+            <p class="fw-bold">$785 night</p>
+        </div>
+        <div class="col">
+            <img src="/static/Houses/OceanCity_MD.png" alt="OceanCity" />
+            <p class="fw-bold mt-2">Ocean City, Maryland</p>
+            <p>On Ocean City Beach</p>
+            <p>Aug 26-31</p>
+            <p class="fw-bold">$785 night</p>
+        </div>
     </div>
 </div>
-
-
-
-
-@*<img src="static/img/airbnb-logo.png" class="img-thumbnail" />*@
-@*<SurveyPrompt Title="How is Blazor working for you?" />*@
