--- a/Client/wwwroot/css/app.css
+++ b/Client/wwwroot/css/app.css
@@ -32,6 +32,35 @@
     display: flex;
     align-items: center;
 }
+.btn-1{
+    color:crimson;
+}
+
+.pics {
+    width:100%;
+}
+
+.pics-2 {
+    height:235px;
+}
+
+.big-div {
+    max-width:1120px
+}
+
+.small-div{
+    width:40%;
+    overflow:hidden;
+    height:722px;
+}
+
+.icons {
+    width: 20px;
+}
+
+.icons-2 {
+    height: 30px;
+}
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
