--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -3,6 +3,7 @@
 <PageTitle>Index</PageTitle>
 
 <h1>Hello, world!</h1>
+<a href="/registration">Link</a>
 <img src="static/img/airbnb-logo.png" class="img-thumbnail" />
 
 Welcome to your new app.
