--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -1,8 +1,17 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
-  
-
+<div >
+    <nav class="d-flex justify-content-between brder">
+        <a href="/"><img src="static/img/airbnb-logo2.png" class="logo" /></a>
+        <div class="mt-3">
+            <input type="text" placeholder="Anywhere | Any Week | Add Guests" class="rounded-pill search p-2" />
+        </div>
+        <div class="d-flex mt-3">
+            <a class="btn btn-danger" href="/login">Login</a>
+            <p class="me-3">Airbnb your home</p>
+            <img src="static/img/globe.png" class="globe-logo" />
+        </div>
+    </nav>
     <main>
 
         <article class="content px-4">
